# wanderp

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml
ai-engine/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  run_mock.sh
ai-engine/app/: __init__.py  config.py  main.py
ai-engine/app/api/: health.py  plan.py  preference.py  recommend.py
ai-engine/app/core/: mock_data_loader.py
ai-engine/app/core/nlp/: intent_parser.py  sentiment.py
ai-engine/app/core/planner/: constraint_solver.py  llm_planner.py  local_planner.py  plan_models.py  plan_optimizer.py
ai-engine/app/core/rag/: indexer.py  knowledge_base.py  retriever.py  vector_store.py
ai-engine/app/core/recommender/: food_recommender.py  hybrid_recommender.py  preference_aggregator.py  scenic_recommender.py
ai-engine/app/models/: activity.py  plan_request.py  preference.py  restaurant.py  trip.py  user.py
ai-engine/app/services/: amap_service.py  embedding_service.py  feizhu_service.py  juhe_service.py  llm_service.py  weather_service.py
ai-engine/app/utils/: cache.py  logger.py
ai-engine/tests/: test_planner.py  test_rag.py  test_recommender.py
client/: README.md  analysis_options.yaml  pubspec.yaml
client/lib/: app.dart  main.dart
client/lib/config/: theme.dart  (+3 more)
scripts/: init-db.sql
server/: Dockerfile  Makefile  README.md  go.mod
server/api/: openapi.yaml
server/configs/: dev.yaml  prod.yaml
server/migrations/: 001_init_users.sql  002_init_trips.sql  003_init_expenses.sql
server/scripts/: migrate.sh
(+118 files in other folders)
