[project]
name = "wanderp-ai-engine"
version = "0.1.0"
description = "WanderP 智能旅行规划AI引擎 - 基于LLM与约束求解的行程规划服务"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "WanderP Team" }
]
keywords = ["travel", "ai", "planning", "llm", "recommendation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "llama-index>=0.12.0",
    "llama-index-core>=0.12.0",
    "dashscope>=1.20.0",
    "ortools>=9.11",
    "pymilvus>=2.5.0",
    "redis>=5.2.0",
    "jieba>=0.42.1",
    "numpy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
